updated reference with Fatclique paper

--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,11 @@
+@inproceedings{zhang2019understanding,
+  title={Understanding lifecycle management complexity of datacenter topologies},
+  author={Zhang, Mingyang and Mysore, Radhika Niranjan and Supittayapornpong, Sucha and Govindan, Ramesh},
+  booktitle={16th $\{$USENIX$\}$ Symposium on Networked Systems Design and Implementation ($\{$NSDI$\}$ 19)},
+  pages={235--254},
+  year={2019}
+}
+
 @misc{anonrepo,
   title={Anonymized for double blind review},
   author={Anonymous}
