--- a/reference.bib
+++ b/reference.bib
@@ -1,7 +1,7 @@
 @inproceedings{zhang2019understanding,
   title={Understanding lifecycle management complexity of datacenter topologies},
   author={Zhang, Mingyang and Mysore, Radhika Niranjan and Supittayapornpong, Sucha and Govindan, Ramesh},
-  booktitle={16th $\{$USENIX$\}$ Symposium on Networked Systems Design and Implementation ($\{$NSDI$\}$ 19)},
+  booktitle={NSDI},
   pages={235--254},
   year={2019}
 }
@@ -18,9 +18,9 @@
 }
 
 @inproceedings{alizadeh2010data,
-  title={Data center tcp (dctcp)},
+  title={Data center TCP (DCTCP)},
   author={Alizadeh, Mohammad and Greenberg, Albert and Maltz, David A and Padhye, Jitendra and Patel, Parveen and Prabhakar, Balaji and Sengupta, Sudipta and Sridharan, Murari},
-  booktitle={Proceedings of the ACM SIGCOMM 2010 conference},
+  booktitle={SIGCOMM},
   pages={63--74},
   year={2010}
 }
@@ -35,7 +35,7 @@
 @inproceedings{bojja2016costly,
   title={Costly circuits, submodular schedules and approximate carath{\'e}odory theorems},
   author={Bojja Venkatakrishnan, Shaileshh and Alizadeh, Mohammad and Viswanath, Pramod},
-  booktitle={Proceedings of the 2016 ACM SIGMETRICS International Conference on Measurement and Modeling of Computer Science},
+  booktitle={SIGMETRICS},
   pages={75--88},
   year={2016}
 }
@@ -133,7 +133,7 @@
 @inproceedings{chang2017robust,
   title={Robust validation of network designs under uncertain demands and failures},
   author={Chang, Yiyang and Rao, Sanjay and Tawarmalani, Mohit},
-  booktitle={14th $\{$USENIX$\}$ Symposium on Networked Systems Design and Implementation ($\{$NSDI$\}$ 17)},
+  booktitle={NSDI},
   pages={347--362},
   year={2017}
 }
@@ -238,7 +238,7 @@
 @inproceedings{al2010hedera,
   title={Hedera: dynamic flow scheduling for data center networks.},
   author={Al-Fares, Mohammad and Radhakrishnan, Sivasankar and Raghavan, Barath and Huang, Nelson and Vahdat, Amin and others},
-  booktitle={Nsdi},
+  booktitle={NSDI},
   volume={10},
   number={2010},
   year={2010}
@@ -260,12 +260,8 @@
  title = {Beyond Fat-trees Without Antennae, Mirrors, and Disco-balls},
  booktitle={SIGCOMM},
  year = {2017},
- isbn = {978-1-4503-4653-5},
- location = {Los Angeles, CA, USA},
  pages = {281--294},
- numpages = {14},
  publisher = {ACM},
- address = {New York, NY, USA},
 } 
 
 @article{halperin2011augmenting,
@@ -584,7 +580,7 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 @inproceedings{rotornet_mellette2017,
   title={RotorNet: A scalable, low-complexity, optical datacenter network},
   author={Mellette, William M and McGuinness, Rob and Roy, Arjun and Forencich, Alex and Papen, George and Snoeren, Alex C and Porter, George},
-  booktitle={Proceedings of the Conference of the ACM Special Interest Group on Data Communication},
+  booktitle={SIGCOMs},
   year={2017}
 }
 
@@ -631,21 +627,21 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   title={c-Through: Part-time optics in data centers},
   author={Wang, Guohui and Andersen, David G and Kaminsky, Michael and Papagiannaki, Konstantina and Ng, TS and Kozuch, Michael and Ryan, Michael},
   booktitle={SIGCOMM},
-  year={2011}
+  year={2011},
 }
 
 @book{porter2013integrating,
   title={Integrating microsecond circuit switching into the data center},
   author={Porter, George and Strong, Richard and Farrington, Nathan and Forencich, Alex and Chen-Sun, Pang and Rosing, Tajana and Fainman, Yeshaiahu and Papen, George and Vahdat, Amin},
   booktitle={SIGCOMM},
-  year={2013}
+  year={2013},
 }
 
 @inproceedings{singla2010proteus,
   title={Proteus: a topology malleable data center network},
   author={Singla, Ankit and Singh, Atul and Ramachandran, Kishore and Xu, Lei and Zhang, Yueping},
   booktitle={Proceedings of the 9th ACM SIGCOMM Workshop on Hot Topics in Networks},
-  year={2010}
+  year={2010},
 }
 
 @inproceedings{singh2015jupiter,
@@ -786,7 +782,7 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 
 @inproceedings{kandula2009flyways,
   title={Flyways to de-congest data center networks},
-  booktitle={Proc. HotNets},
+  booktitle={HotNets},
   author={Kandula, Srikanth and Padhye, Jitendra and Bahl, Paramvir},
   year={2009},
 }
