--- a/reference.bib
+++ b/reference.bib
@@ -114,6 +114,13 @@
   howpublished= {https://github.com/ndal-eth/netbench}
 }
 
+@misc{google_netinfra,
+  author = {{Google}},
+  title = {{Pulling Back the Curtain on Google?s Network Infrastructure}},
+  year={2015},
+  howpublished= {https://goo.gl/hx0vz3.},
+}
+
 @inproceedings{wang2006cope,
   title={COPE: traffic engineering in dynamic networks},
   author={Wang, Hao and Xie, Haiyong and Qiu, Lili and Yang, Yang Richard and Zhang, Yin and Greenberg, Albert},
@@ -887,6 +894,13 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   title = {Project Sirius},
   author   = {{Microsoft Research}},
   booktitle     = {https://www.microsoft.com/en-us/research/project/sirius/}
+}
+
+@inproceedings{ballani2020sirius,
+  title={{Sirius: A Flat Datacenter Network with Nanosecond Optical Switching}},
+  author={Ballani, Hitesh and Costa, Paolo and Behrendt, Raphael and Cletheroe, Daniel and Haller, Istvan and Jozwik, Krzysztof and Karinou, Fotini and Lange, Sophie and Shi, Kai and Thomsen, Benn and others},
+  booktitle={Sigcomm},
+  year={2020}
 }
 
 @inproceedings{BoxPlot,
