--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,14 @@
+@article{burns2016borg,
+  title={Borg, Omega, and Kubernetes},
+  author={Burns, Brendan and Grant, Brian and Oppenheimer, David and Brewer, Eric and Wilkes, John},
+  journal={Queue},
+  volume={14},
+  number={1},
+  pages={70--93},
+  year={2016},
+  publisher={ACM New York, NY, USA}
+}
+
 @inproceedings{zhang2019understanding,
   title={Understanding lifecycle management complexity of datacenter topologies},
   author={Zhang, Mingyang and Mysore, Radhika Niranjan and Supittayapornpong, Sucha and Govindan, Ramesh},
