--- a/reference.bib
+++ b/reference.bib
@@ -22,6 +22,11 @@
   author={Anonymous}
 }
 
+@misc{tech_report,
+  author = {{Anonymized for review purposes}},
+  howpublished= "\url{https://drive.google.com/file/d/1CcwRUAt1po_6vTZdz5gxeUELWjqqlJLX}",
+}
+
 @misc{andreyev2014introducing,
   title={Introducing data center fabric, the next-generation Facebook data center network},
   author={Andreyev, Alexey},
