Included additional references.

--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,48 @@
+@inproceedings{chu2018fast,
+  title={Fast, high-radix silicon photonic switches},
+  author={Chu, Tao and Qiao, Lei and Tang, Weijie and Guo, Defeng and Wu, Weike},
+  booktitle={2018 Optical Fiber Communications Conference and Exposition (OFC)},
+  pages={1--3},
+  year={2018},
+  organization={IEEE}
+}
+
+@article{seok2016large,
+  title={Large-scale broadband digital silicon photonic switches with vertical adiabatic couplers},
+  author={Seok, Tae Joon and Quack, Niels and Han, Sangyoon and Muller, Richard S and Wu, Ming C},
+  journal={Optica},
+  volume={3},
+  number={1},
+  pages={64--70},
+  year={2016},
+  publisher={Optical Society of America}
+}
+
+@article{benjamin2020pulse,
+  title={PULSE: optical circuit switched data center architecture operating at nanosecond timescales},
+  author={Benjamin, Joshua L and Gerard, Thomas and Lavery, Domani{\c{c}} and Bayvel, Polina and Zervas, Georgios},
+  journal={Journal of Lightwave Technology},
+  volume={38},
+  number={18},
+  pages={4906--4921},
+  year={2020},
+  publisher={IEEE}
+}
+
+@inproceedings{chatzieleftheriou2018larry,
+  title={Larry: Practical network reconfigurability in the data center},
+  author={Chatzieleftheriou, Andromachi and Legtchenko, Sergey and Williams, Hugh and Rowstron, Antony},
+  booktitle={15th $\{$USENIX$\}$ Symposium on Networked Systems Design and Implementation ($\{$NSDI$\}$ 18)},
+  pages={141--156},
+  year={2018}
+}
+
+@misc{optical_patch_panel,
+  author = {{Telescent G4 Network Topology Manager}},
+  year = {2021},
+  howpublished= {https://www.telescent.com/products.}
+}
+
 @article{burns2016borg,
   title={Borg, Omega, and Kubernetes},
   author={Burns, Brendan and Grant, Brian and Oppenheimer, David and Brewer, Eric and Wilkes, John},
@@ -782,9 +827,24 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 	howpublished = {https://dcd.events/uploads/partner\_1456\_document.PDF}
 }
 
+@misc{polatis_ocs,
+  title = {Polatis Optical Circuit Switch},
+  year = {2021},
+  howpublished = {https:
+//www.polatis.com/series-7000-384x384-
+port-software-controlled-optical-circuitswitch-sdn-enabled.asp}
+}
+
 @misc{calient,
   author = {{CALIENT Technologies, Inc.}},
   howpublished= {https://www.calient.net/}
+}
+
+@misc{calient_ocs_s320,
+  title = {Calient S-Series, S320},
+  year = {2021},
+  month = {March},
+  howpublished = {https://www.calient.net/resources/datasheets/}
 }
 
 @misc{huawei,
