Added Tomahawk 4 EPS reference

--- a/reference.bib
+++ b/reference.bib
@@ -37,10 +37,23 @@
   year={2018}
 }
 
+@misc{forbes_data_center_size,
+  title = {{With The Public Clouds Of Amazon, Microsoft And Google, Big Data Is The Proverbial Big Deal}},
+  author={Pierr Johnson},
+  year = {2017},
+  howpublished= "\url{https://www.forbes.com/sites/johnsonpierr/2017/06/15/with-the-public-clouds-of-amazon-microsoft-and-google-big-data-is-the-proverbial-big-deal/?sh=80b1efb2ac3c}",
+}
+
 @misc{optical_patch_panel,
   author = {{Telescent G4 Network Topology Manager}},
   year = {2021},
   howpublished= {https://www.telescent.com/products.}
+}
+
+@misc{tomahawk_4,
+  author = {{Broadcom Tomahawk 4 / BCM56990 Series}},
+  year = {2016},
+  howpublished= {https://docs.broadcom.com/doc/12398014}
 }
 
 @article{burns2016borg,
